--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:site_name" content="Musba">
     <meta property="og:url" content="https://musba.netlify.app/">
     <meta property="og:description" content="Venez découvrir des œuvres à travers des expériences inoubliables au Musée des Beaux Arts de Bordeaux, dans une atmosphère unique et agréable.">
-    <meta property="og:image" content="hhttps://musba.netlify.app/assets/img/logos/musba.svg">
+    <meta property="og:image" content="https://musba.netlify.app/assets/img/logos/musba.svg">
 </head>
 <body>
   <header>
