--- a/exposition.html
+++ b/exposition.html
@@ -87,7 +87,7 @@
             <nav>
                 <ul class="navigation">
                     <li>
-                        <a class="active" href="#">Accueil</a>
+                        <a class="active" href="./index.html">Accueil</a>
                     </li>
                     <li>
                         <a href="#">Billeterie</a>
