--- a/exposition.html
+++ b/exposition.html
@@ -197,7 +197,9 @@
         </section>
         <section class="main-img">
             <img src="./assets/img/exposition/image-1.webp" alt="">
-            <p class="legend" data-translation-key="first_pic_caption"> Samuel Colman, Un paysage romantique avec l’arrivée de la reine de Saba 1830</p>
+            <div class="overlay">
+                <p class="legend" data-translation-key="first_pic_caption"> Samuel Colman, Un paysage romantique avec l’arrivée de la reine de Saba 1830</p>
+            </div>
         </section>
         <div class="expo">
             <section class="table-of-content">
@@ -241,12 +243,14 @@
                         britannique, qui eut lieu trois ans plus tard.
                     </p>
                     <div class="img-article">
-                        <img src="./assets/img/exposition/image-2.webp" alt="">
-                        <p class="legend" data-translation-key="second_pic_caption">
-                            William West, Les Hébreux traversant le désert, précédés par le pilier de lumière (The
-                            Israelites Passing through the Wilderness, Preceded by the Pillar of Light), 1845, 
-                            huile sur toile © Bristol, Bristol Museum & Art Gallery.
-                        </p>
+                        <img src="./assets/img/exposition/image-2.webp" alt=""> 
+                        <div class="overlay">
+                            <p class="legend" data-translation-key="second_pic_caption">
+                                William West, Les Hébreux traversant le désert, précédés par le pilier de lumière (The
+                                Israelites Passing through the Wilderness, Preceded by the Pillar of Light), 1845, 
+                                huile sur toile © Bristol, Bristol Museum & Art Gallery.
+                            </p>
+                        </div>
                     </div>
                     <p class="text-expo" data-translation-key="fourth_paragraph">
                         Le musée des Beaux-Arts accueille ainsi 80 œuvres provenant majoritairement du
