--- a/exposition.html
+++ b/exposition.html
@@ -528,7 +528,7 @@
         </div>
     </footer>
 </body>
-<script>
+<!-- <script>
 const languageSelector = document.getElementById("language-selector");
 const elements = document.querySelectorAll('[data-translation-key]');
 
@@ -548,5 +548,5 @@ languageSelector.addEventListener("change", function() {
     });
 });
 
-    </script>
+    </script> -->
 </html>
