--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         </div>
     </section>
     <div class="box-musba" id="show">
-        <p class="text-musba">Venez donc découvrir au <span class="bold red">Musba</span> l’essence même de la forte histoire que sublimaient les artistes passés par leurs œuvres au travers de plus de <span class="bold red">3000</span><span class="red"> peintures</span>, <span class="bold red">666</span> <span class="red">sculptures</span>, <span class="bold red">1564</span> <span class="red">estampes</span> et <span class="bold red">3328</span> <span class="red">dessins</span> et re-découvrez une façon de voir le monde.</p>
+        <p class="text-musba">Venez découvrir au <span class="bold red">Musba</span> l'essence même des Beaux Arts, sublimée par les artistes et leurs œuvres, au travers de plus de <span class="bold red">3000</span><span class="red"> peintures</span>, <span class="bold red">666</span> <span class="red">sculptures</span>, <span class="bold red">1564</span> <span class="red">estampes</span> et <span class="bold red">3328</span> <span class="red">dessins</span> et re-découvrez une façon de voir le monde.</p>
     </div>
     <section class="expo">
         <h2 class="title-section">Les expositions du moment</h2>
@@ -215,7 +215,7 @@
             <p class="text-visite">Mercredi à lundi : 11h00 - 18h00<br> Fermé les mardis et les jours fériés</p>
             <h3 class="title-visite">Tarifs</h3>
             <div class="link-visite">
-                <p>Simple visite (+tarifs particuliers)</p>
+                <p>Simple visite (+ tarifs particuliers)</p>
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
                     <g clip-path="url(#clip0_204_3290)">
                       <path d="M23.5618 14.2708L10.0144 27.8182L7.78901 25.5927L21.3363 12.0454H8.87391L8.90173 8.90199H26.7052V26.7054L23.5618 26.7333V14.2708Z" fill="#252525"/>
