--- a/exposition.html
+++ b/exposition.html
@@ -34,6 +34,9 @@
     <meta property="og:image" content="https://musba.netlify.app/assets/img/logos/musba.svg">
 </head>
 <body>
+    <div class="student-project">
+        Ce site s'inscrit dans le cadre d'un projet étudiant (MMI Bordeaux) - <a href="https://www.musba-bordeaux.fr/">Site officiel du MusBa</a>
+      </div>
     <header>
         <div class="top-header">
             <a href="./index.html" title="Retour à l'accueil" >
