--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="student-project">
-    Ce site s'inscrit dans le cadre d'un projet étudiant (MMI Bordeaux) - <a href="https://www.musba-bordeaux.fr/">Site officiel du MusBa</a>
+    Ce site s'inscrit dans le cadre d'un projet étudiant (MMI Bordeaux) - <a href="https://www.musba-bordeaux.fr/">Site officiel du MusBa</a> | Par Riquier Thomas, Juhel Alexis, Wainberg Tom, Volle Esthebann, Courcaud Antoine
   </div>
   <header>
     <div class="top-header">
