--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="popup-content">
         <span class="close" onclick="closePopup()">&times;</span>
         <div class="student-project">
-            Ce site s'inscrit dans le cadre d'un projet étudiant (MMI Bordeaux) - <a href="https://www.musba-bordeaux.fr/">Site officiel du MusBa</a> | Par <a target="_blank" href="https://viturna.fr">Riquier Thomas</a>, <a target="_blank" href="https://www.linkedin.com/in/alexis-juhel16/">Juhel Alexis</a>, <a target="_blank" href="https://www.linkedin.com/in/tom-wainberg/">Wainberg Tom</a>, <a target="_blank" href="https://www.linkedin.com/in/esthebann-volle-750924294/">Volle Esthebann</a>, <a target="_blank" href="https://www.linkedin.com/in/antoine-courcaud/">Courcaud Antoine</a>
+            Ce site s'inscrit dans le cadre d'un projet étudiant (MMI Bordeaux) - <a href="https://www.musba-bordeaux.fr/">Site officiel du MusBa</a> | Par <a target="_blank" href="https://viturna.fr">Riquier Thomas</a>, <a target="_blank" href="https://www.linkedin.com/in/alexis-juhel16/">Juhel Alexis</a>, <a target="_blank" href="https://tomwainberg.fr/">Wainberg Tom</a>, <a target="_blank" href="https://www.linkedin.com/in/esthebann-volle-750924294/">Volle Esthebann</a>, <a target="_blank" href="https://www.linkedin.com/in/antoine-courcaud/">Courcaud Antoine</a>
         </div>
     </div>
 </div>
